// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`-> 1 message 1`] = `
Object {
  "2017-02-01T09:00:00-08:00": Object {
    "createdAt": "2017-02-01T09:00:00-08:00",
    "id": 0,
    "text": "Run the tests",
    "username": "dan",
  },
}
`;

exports[`-> 1 message 2`] = `
Object {
  "2017-02-01T09:00:00-08:00": Object {
    "createdAt": "2017-02-01T09:00:00-08:00",
    "id": 0,
    "text": "Run the tests",
    "username": "dan",
  },
}
`;

exports[`-> 2 messages 1`] = `
Object {
  "0": Object {
    "createdAt": "2017-02-01T09:00:00-08:00",
    "id": 0,
    "text": "Run the tests",
    "username": "dan",
  },
  "2017-02-01T09:01:00-08:00": Object {
    "createdAt": "2017-02-01T09:01:00-08:00",
    "id": 1,
    "text": "Use Redux",
    "username": "dan",
  },
}
`;

exports[`-> 3 messages 1`] = `
Object {
  "0": Object {
    "createdAt": "2017-02-01T09:00:00-08:00",
    "id": 0,
    "text": "Run the tests",
    "username": "dan",
  },
  "1": Object {
    "createdAt": "2017-02-01T09:01:00-08:00",
    "id": 1,
    "text": "Use Redux",
    "username": "dan",
  },
  "2017-02-01T09:20:00-08:00": Object {
    "createdAt": "2017-02-01T09:20:00-08:00",
    "id": 2,
    "text": "Fix the tests",
    "username": "dan",
  },
}
`;

exports[`default 1`] = `Object {}`;

exports[`default 2`] = `Object {}`;

exports[`message actions addMessage should create ADD_MESSAGE action 1`] = `
Object {
  "convo": "react",
  "rawMarkup": "<p>Use Redux</p>",
  "text": "Use Redux",
  "type": "server.ADD_MESSAGE",
  "userId": "1231231",
}
`;

exports[`message actions fetchMessages should create [CALL_API] action 1`] = `
Object {
  Symbol(Call API): Object {
    "endpoint": "null/api/messages/chat",
    "method": "GET",
    "types": Array [
      "MESSAGES_REQUEST",
      Object {
        "payload": [Function],
        "type": "MESSAGES_SUCCESS",
      },
      "MESSAGES_FAILURE",
    ],
  },
}
`;

exports[`no payload 1`] = `Object {}`;

exports[`with payload 1`] = `Object {}`;
